--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,9 +135,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/Kvik/KvikSave/TestLevel
-MRUItem2=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
+MRUItem0=/Game/Kvik/KvikSave/TestLevel
+MRUItem1=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem3=/Game/Kvik/KvikSave/Untitled
 MRUItem4=/Game/Kvik/KvikSave/Test_Car
 MRUItem5=/Game/1WUI/SceneFirst/TestLight
@@ -187,6 +187,8 @@ AnimStateNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon
 AnimStateTransitionNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 PlayerStart=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_BTR_2_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+MovementComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+K2Node_Timeline=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -272,12 +274,12 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Kvik/KvikSave/TestLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn.BP_Kv_PlayerHand_Pawn
+OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new.ChController_Player_new
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -535,18 +537,18 @@ WheeledVehiclePawn="\"Object\" "
 LanBP_Kv_PlayerHand_C="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/Kvik/Effects/BP_Kv_Explosion_Actor
-MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
-MRUItem3=/Game/Kvik/KvikSave/TestLevel
-MRUItem4=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
-MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
-MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
-MRUItem7=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
-MRUItem8=/Game/Kvik/KvikSave/Untitled
-MRUItem9=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
-MRUItem10=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
-MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem0=/Game/Kvik/KvikSave/TestLevel
+MRUItem1=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
+MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem4=/Game/Kvik/Effects/BP_Kv_Explosion_Actor
+MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
+MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
+MRUItem8=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
+MRUItem9=/Game/Kvik/KvikSave/Untitled
+MRUItem10=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem11=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
 MRUItem12=/Game/Kvik/KvikSave/Test_Car
 MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
 MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
@@ -1704,6 +1706,10 @@ BP_Kv_Explosion_Actor_C.Input=True
 BP_Kv_Explosion_Actor_C.HLOD=True
 BP_Kv_Explosion_Actor_C.WorldPartition=True
 BP_Kv_Explosion_Actor_C.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
