--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ MRUItem5=/Game/1WUI/SceneFirst/TestLight
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,
-SceneComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+SceneComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 BP_Kv_Ladder_Actor_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 BoxComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,
 Character=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -183,7 +183,7 @@ CameraActor=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.T
 K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 EdGraphNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
+SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimStateNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 AnimStateTransitionNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 PlayerStart=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -279,7 +279,7 @@ BP_FirstPersonCharacter_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Tra
 K2Node_SwitchInteger=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_Tank_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_BMP_3_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-BP_Player_Base_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+BP_Player_Base_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 SetMovementState_18=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SetMovementState=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -323,7 +323,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Cars/Tank
+ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -394,7 +394,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base.BP_Player_Base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -414,15 +413,15 @@ Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-SceneComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 CharacterMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
 PawnMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
 NavMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
@@ -707,28 +706,29 @@ MaterialExpressionReroute="\"Object\" "
 MaterialExpressionRerouteBase="\"Object\" "
 Kv_Tank_Anim_C="\"Object\" "
 VehicleAnimationInstance="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
-MRUItem1=/Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase
-MRUItem2=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base
-MRUItem3=/Game/Kvik/KvikSave/Test_Car
-MRUItem4=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/VaultingComponent
-MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem6=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
-MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
-MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
-MRUItem9=/Game/PimpMaPlayer/BP_Player_Controler/NewMaterialParameterCollection
-MRUItem10=/Game/PimpMaPlayer/BP_Player_Controler/ABP_AKANIMBASE
-MRUItem11=/Game/PimpMaPlayer/BP_Player_Controler/ABP_Kv_NawHand
-MRUItem12=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
-MRUItem13=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem14=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/EVaultingState
-MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation
-MRUItem16=/Game/PimpMaPlayer/BP_Player_Controler/E_MovementState
-MRUItem17=/Game/PimpMaPlayer/BP_Player_Controler/ChController_Player_new
-MRUItem18=/Game/Kvik/Kvik_Modes/Cars/BTR_2/BTR_90_2_Hull_002_Skeleton
-MRUItem19=/Game/Kvik/Kvik_Modes/Cars/BTR_2/BTR_90_2_Hull_001_Skeleton
+MRUItem0=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
+MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
+MRUItem2=/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector
+MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
+MRUItem4=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base
+MRUItem5=/Game/Kvik/KvikSave/Test_Car
+MRUItem6=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
+MRUItem7=/Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase
+MRUItem8=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/VaultingComponent
+MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem10=/Game/PimpMaPlayer/BP_Player_Controler/NewMaterialParameterCollection
+MRUItem11=/Game/PimpMaPlayer/BP_Player_Controler/ABP_AKANIMBASE
+MRUItem12=/Game/PimpMaPlayer/BP_Player_Controler/ABP_Kv_NawHand
+MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem14=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem15=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/EVaultingState
+MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation
+MRUItem17=/Game/PimpMaPlayer/BP_Player_Controler/E_MovementState
+MRUItem18=/Game/PimpMaPlayer/BP_Player_Controler/ChController_Player_new
+MRUItem19=/Game/Kvik/Kvik_Modes/Cars/BTR_2/BTR_90_2_Hull_002_Skeleton
 
 [DetailCategories]
 BP_Kv_PlayerHand_Pawn_C.Default=True
@@ -1017,7 +1017,7 @@ CameraComponent.Sockets=True
 CameraComponent.CameraSettings=True
 CameraComponent.CameraOptions=True
 CameraComponent.Camera=True
-CameraComponent.PostProcess=True
+CameraComponent.PostProcess=False
 CameraComponent.ComponentTick=True
 CameraComponent.Tags=True
 CameraComponent.ComponentReplication=True
@@ -2081,6 +2081,8 @@ Kv_Tank_Anim_C.Default=True
 Kv_Tank_Anim_C.RootMotion=True
 Kv_Tank_Anim_C.Notifies=True
 Kv_Tank_Anim_C.Montage=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
@@ -2160,10 +2162,11 @@ DeleteConfirmationVariable_Warning=False
 /Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase.ABP_PlayerAnimBase=0
 /Game/PimpMaPlayer/BP_Player_Controler/ABP_AKANIMBASE.ABP_AKANIMBASE=0
 /Game/PimpMaPlayer/BP_Player_Controler/MPC_Fov.MPC_Fov=0
-/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp.MF_Fp=0
-/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4.pasted__blinn4=0
+/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp.MF_Fp=1
+/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4.pasted__blinn4=1
 /Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1.ESLA1=0
 /Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim.Kv_Tank_Anim=1
+/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector.CameraDirectionVector=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2210,8 +2213,8 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=1017.600 Y=4.000
-WindowSize=X=900.000 Y=819.200
-InitiallyMaximized=True
+WindowSize=X=901.600 Y=819.200
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3395,6 +3398,7 @@ UserDefinedEnum.Enumerators=False
 CharacterMovementComponent.Character Movement: Jumping / Falling=True
 StaticMeshActor.Collision=True
 StaticMeshActor.Physics=False
+CameraComponent.ComponentTick=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -3476,6 +3480,7 @@ bMaterialQualityUsed[3]=0
 bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bRealtimeMaterialViewport=False
 
 [MaterialEditor]
 PrimType=1
