--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,14 +152,14 @@ BoxComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.C
 Character=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_Kv_Hend_1_Mode_C=StaticMeshActor.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 BP_Kv_PlayerHand_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-CapsuleComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Physics.ConstraintsGroup,
-K2Node_VariableGet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+CapsuleComponent=
+K2Node_VariableGet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 ChController_Player_new_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_VariableSet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_VariableSet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
+PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 ABP_Kv_AK_2_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 ABP_Kv_NawHand_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 EdGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -172,7 +172,7 @@ Kv_Dron2_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformComm
 BP_Kv_Pistol_1_Actor_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SpringArmComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_Variable=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_CustomEvent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_CustomEvent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
 CharacterMovementComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimationGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimationStateMachineGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -180,9 +180,9 @@ StaticMesh=StaticMesh.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 K2Node=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CameraActor=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
 EdGraphNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimStateNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 AnimStateTransitionNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -279,13 +279,13 @@ BP_FirstPersonCharacter_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Tra
 K2Node_SwitchInteger=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_Tank_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_BMP_3_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-BP_Player_Base_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+BP_Player_Base_C=
 SetMovementState_18=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SetMovementState=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_MacroInstance=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_MacroInstance=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_InputAxisEvent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_Tunnel=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_Tunnel=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
 ABP_Kv_Hand_Anim_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_Kv_Point_Take_Actor_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CalculateFloorInfluence=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -304,6 +304,7 @@ TickVault=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Tra
 ABP_PlayerAnimBase_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimGraphNode_Root=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimGraphNode_ComponentToLocalSpace=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+ArrowComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -323,7 +324,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder
+ContentBrowserDrawer.SelectedPaths=/Game/PimpMaPlayer/BP_Player_Controler
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -394,6 +395,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base.BP_Player_Base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -413,15 +415,15 @@ Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-SceneComponent="\"Object\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 BoxComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags\" \"Object.Actor.Tags\" "
-CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+CapsuleComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
 PawnMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
 NavMovementComponent="\"Object\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" \"Object.Tags.ComponentTags\" "
@@ -709,11 +711,11 @@ VehicleAnimationInstance="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
-MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
-MRUItem2=/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector
-MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
-MRUItem4=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base
+MRUItem0=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base
+MRUItem1=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
+MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
+MRUItem3=/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector
+MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
 MRUItem5=/Game/Kvik/KvikSave/Test_Car
 MRUItem6=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
 MRUItem7=/Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase
@@ -2083,6 +2085,38 @@ Kv_Tank_Anim_C.Notifies=True
 Kv_Tank_Anim_C.Montage=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+BP_Player_Base_C.TransformCommon=True
+BP_Player_Base_C.Animation=True
+BP_Player_Base_C.Mesh=True
+BP_Player_Base_C.Physics=True
+BP_Player_Base_C.Clothing=True
+BP_Player_Base_C.MasterPoseComponent=True
+BP_Player_Base_C.Lighting=True
+BP_Player_Base_C.AnimationRig=True
+BP_Player_Base_C.Deformer=True
+BP_Player_Base_C.SkinWeights=True
+BP_Player_Base_C.Navigation=True
+BP_Player_Base_C.VirtualTexture=True
+BP_Player_Base_C.Tags=True
+BP_Player_Base_C.Activation=True
+BP_Player_Base_C.Character Movement (General Settings)=True
+BP_Player_Base_C.Character Movement: Walking=True
+BP_Player_Base_C.Character Movement: Jumping / Falling=True
+BP_Player_Base_C.Character Movement (Networking)=True
+BP_Player_Base_C.Character Movement: Swimming=True
+BP_Player_Base_C.Character Movement: Flying=True
+BP_Player_Base_C.Character Movement: Custom Movement=True
+BP_Player_Base_C.Character Movement (Rotation Settings)=True
+BP_Player_Base_C.Character Movement: Physics Interaction=True
+BP_Player_Base_C.Character Movement=True
+BP_Player_Base_C.Character Movement: Avoidance=True
+BP_Player_Base_C.RootMotion=True
+BP_Player_Base_C.Character Movement: NavMesh Movement=True
+BP_Player_Base_C.NavMovement=True
+BP_Player_Base_C.Velocity=True
+BP_Player_Base_C.PlanarMovement=True
+BP_Player_Base_C.MovementComponent=True
+BP_Player_Base_C.Shape=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
@@ -2212,9 +2246,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=1017.600 Y=4.000
-WindowSize=X=901.600 Y=819.200
-InitiallyMaximized=False
+ScreenPosition=X=312.800 Y=0.000
+WindowSize=X=904.800 Y=819.200
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
