--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ WarInUkraine/Intermediate/CachedAssetRegistry.bin
 WarInUkraine/Intermediate/ReimportCache/3688439234.bin
 WarInUkraine/Saved/Logs/WarInUkraine.log
 WarInUkraine/Saved/Logs/WarInUkraine.log
+WarInUkraine/Saved/Logs/WarInUkraine-backup-2023.12.09-20.07.00.log
+WarInUkraine/Saved/Logs/WarInUkraine-backup-2023.12.11-10.09.46.log
+WarInUkraine/Saved/Logs/WarInUkraine-backup-2023.12.04-14.09.40.log
