--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,7 +158,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.World
 WorldPartitionRuntimeSpatialHash=
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 ChController_Player_new_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_VariableSet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
+K2Node_VariableSet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 ABP_Kv_AK_2_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 ABP_Kv_NawHand_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -166,21 +166,21 @@ EdGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Trans
 K2Node_InputKey=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PersonaPreviewSceneDescription=
 AssetViewerSettings=
-AnimGraphNode_TransitionResult=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+AnimGraphNode_TransitionResult=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 CameraComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 Kv_Dron2_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,
 BP_Kv_Pistol_1_Actor_C=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SpringArmComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_Variable=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_CustomEvent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
-CharacterMovementComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+CharacterMovementComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 AnimationGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimationStateMachineGraph=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 StaticMesh=StaticMesh.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 K2Node=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CameraActor=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
+K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 EdGraphNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -279,7 +279,7 @@ BP_FirstPersonCharacter_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Tra
 K2Node_SwitchInteger=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_Tank_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 Kv_BMP_3_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-BP_Player_Base_C=
+BP_Player_Base_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 SetMovementState_18=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SetMovementState=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
@@ -293,7 +293,7 @@ Actor=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transfo
 PostProcessVolume=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BrushComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BillboardComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-VaultingComponent_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+VaultingComponent_C=
 CanVault_2=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CanVault=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CanVault2Hit_3=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -301,10 +301,12 @@ CanVault2Hit=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.
 CheckCapsuleCollision=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MaterialInstanceConstant=
 TickVault=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-ABP_PlayerAnimBase_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+ABP_PlayerAnimBase_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 AnimGraphNode_Root=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 AnimGraphNode_ComponentToLocalSpace=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 ArrowComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,
+K2Node_InputAction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
+ABP_AKANIMBASE_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -395,7 +397,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base.BP_Player_Base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -674,7 +675,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 BillboardComponent="\"Object\" "
-VaultingComponent_C="\"Object\" \"Object.Tags.ComponentTags\" "
+VaultingComponent_C="\"Object\" "
 ABP_PlayerAnimBase_C="\"Object\" "
 ABP_AKANIMBASE_C="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
@@ -712,17 +713,17 @@ MaterialExpressionConstant3Vector="\"Object\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PimpMaPlayer/BP_Player_Controler/BP_Player_Base
-MRUItem1=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
-MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
-MRUItem3=/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector
-MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
-MRUItem5=/Game/Kvik/KvikSave/Test_Car
-MRUItem6=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
-MRUItem7=/Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase
-MRUItem8=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/VaultingComponent
-MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem10=/Game/PimpMaPlayer/BP_Player_Controler/NewMaterialParameterCollection
-MRUItem11=/Game/PimpMaPlayer/BP_Player_Controler/ABP_AKANIMBASE
+MRUItem1=/Game/PimpMaPlayer/BP_Player_Controler/ABP_AKANIMBASE
+MRUItem2=/Game/PimpMaPlayer/BP_Player_Controler/ABP_PlayerAnimBase
+MRUItem3=/Game/PimpMaPlayer/BP_Player_Controler/Vaulting/VaultingComponent
+MRUItem4=/Game/PimpMaPlayer/BP_Player_Controler/MF_Fp
+MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/pasted__blinn4
+MRUItem6=/Engine/Functions/Engine_MaterialFunctions02/Utility/CameraDirectionVector
+MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ESLA1
+MRUItem8=/Game/Kvik/KvikSave/Test_Car
+MRUItem9=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
+MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem11=/Game/PimpMaPlayer/BP_Player_Controler/NewMaterialParameterCollection
 MRUItem12=/Game/PimpMaPlayer/BP_Player_Controler/ABP_Kv_NawHand
 MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
 MRUItem14=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
@@ -2247,7 +2248,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=312.800 Y=0.000
-WindowSize=X=904.800 Y=819.200
+WindowSize=X=912.800 Y=819.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
